# conversational-patts

./: pyproject.toml
docs/: project_plan.md
src/conversational_patterns/patterns/: response_variation.py
src/topic_drift/: data_prep.py  nn_topic_drift_poc.py
src/topic_drift/results/run01/: run01.txt
src/topic_drift/results/run02/: run02.txt
