[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conversational-patterns"
version = "0.1.0"
description = "Research implementation of human-like conversational patterns in Virtual Humans"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["conversational-ai", "virtual-humans", "nlp"]
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.9",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "fastapi>=0.100.0",
    "ray>=2.5.0",
    "redis>=4.5.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pytest>=7.0.0",
    "hypothesis>=6.75.3",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "flake8>=6.0.0",
    "scikit-learn>=1.2.0",
    "tqdm>=4.65.0",
    "matplotlib>=3.7.0",
    "ollama>=0.1.0",
    "huggingface-hub>=0.16.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "sentence-transformers>=2.2.0",
    "torchmetrics>=0.11.0",
    "seaborn>=0.12.2",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "bandit>=1.7.5",
    "pre-commit>=3.3.3",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
multi-line-output = 3

[tool.mypy]
python-version = "3.9"
strict = true
warn-return-any = true
warn-unused-configs = true
disallow-untyped-defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=src"
testpaths = ["tests"]
pythonpath = ["src"]
